tests/NormalTests/paczka1/fuzzy1/51741216.err
Error in line 6: A659 S156 7,7
Error in line 7: A659 S156 293,6
Error in line 22: 74nGkoIm A659 628,2
Error in line 25: 74nGkoIm S156 78,5
